[package]
name = "firefox-sync"
version = "0.1.0"
authors = ["Shiju"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.6"
structopt = "0.3.15"
serde = {  version = "1.0.114" ,  features = ["derive"]}
serde_derive = "1.0.114"
serde_json = {  version = "1.0.56" }
rusqlite = { version = "0.23.1", features = ["bundled"]}
chrono = { version = "0.4", features = ["serde"] }